// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuildMemberUpdates should add data to the tree 1`] = `
Object {
  "added": Object {
    "Test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": Array [
            "Test",
          ],
          "roleNamesRemoved": Array [
            "Example",
          ],
        },
      },
    ],
  },
  "removed": Object {
    "Example": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": Array [
            "Test",
          ],
          "roleNamesRemoved": Array [
            "Example",
          ],
        },
      },
    ],
  },
}
`;

exports[`GuildMemberUpdates should add data to the tree 2`] = `
Object {
  "": Object {
    "": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
        },
      },
    ],
  },
  "added": Object {
    "Test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": Array [
            "Test",
          ],
          "roleNamesRemoved": Array [
            "Example",
          ],
        },
      },
    ],
  },
  "removed": Object {
    "Example": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": Array [
            "Test",
          ],
          "roleNamesRemoved": Array [
            "Example",
          ],
        },
      },
    ],
  },
}
`;

exports[`GuildMemberUpdates should add data to the tree 3`] = `
Object {
  "": Object {
    "": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
        },
      },
    ],
  },
  "added": Object {
    "Test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": Array [
            "Test",
          ],
          "roleNamesRemoved": Array [
            "Example",
          ],
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": Array [
            "Test",
          ],
        },
      },
    ],
  },
  "removed": Object {
    "Example": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": Array [
            "Test",
          ],
          "roleNamesRemoved": Array [
            "Example",
          ],
        },
      },
    ],
  },
}
`;
